--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -205,9 +205,9 @@ hr {
 
 .gradbaBroj {
   padding-top: 7px;
+  padding-left: 8px;
   text-align: center;
-  font-size: 20px;
-  width: 238px;
+  width: 230px;
 }
 
 .gradbaBrojInput {
@@ -215,8 +215,9 @@ hr {
   width: 200px;
   height: 66px !important;
   font-size: 24px;
-  text-align: center;
-  font-weight: bold;
+  border: 1px solid black;
+  padding-top: 4px;
+  line-height: 0.9;
 }
 
 .kniga {
